# fan455-bayes-test

./: Cargo.toml  README.md  plr plot.py
examples/: How to run.txt  README.md  data_X_aug.npy  data_missing_patterns.npy  data_y_aug.npy  plr simulate data unbalance 3.py  plr simulate data.py  plr_bayes.bat  plr_bayes_freqs.bat  plr_bayes_freqs_sim.bat  plr_bayes_real_data.bat  plr_bayes_unbalance.bat  plr_plot 1.py  sim.py
examples/data/: data_X.npy  data_X_aug.npy  data_beta.npy  data_beta_sample.npy  data_inference.csv  data_inference_freq.csv  data_missing_patterns.npy  data_y.npy  data_y_aug.npy
examples/data/model_data/: base_units_each_group.npy  cover_groups.npy  covered_by_groups.npy  units_each_group.npy  units_each_year.npy
rust/: Cargo.toml
rust/src/fan455_arrf64/: build.rs
rust/src/fan455_arrf64/src/: arrf64_basic.rs  arrf64_blas_lapack.rs  arrf64_dyn_arr1.rs  arrf64_dyn_arr2.rs
rust/src/fan455_bayes/: Cargo.toml
rust/src/fan455_bayes/src/: bayes_freqs.rs  bayes_model.rs  bayes_plr.rs  bayes_plr_unbalance.rs  bayes_sampler.rs  bayes_stat.rs  lib.rs
rust/src/fan455_math_array/src/: lib.rs  math_array_diff.rs  math_array_func.rs  math_array_optimize.rs
rust/src/fan455_util/src/: util_npy.rs
src/fan455_arrf64/: Cargo.toml  build.rs
src/fan455_arrf64/src/: arrf64_basic.rs  arrf64_blas_lapack.rs  arrf64_dyn_arr1.rs  arrf64_dyn_arr2.rs  arrf64_sta_arr2.rs  lib.rs
src/fan455_arrf64_macro/src/: lib.rs
src/fan455_bayes/: Cargo.toml
src/fan455_bayes/src/: bayes_freqs.rs  bayes_math.rs  bayes_model.rs  bayes_model_base.rs  bayes_sampler.rs  bayes_stat.rs  lib.rs
src/fan455_math_array/: Cargo.toml
src/fan455_math_array/src/: lib.rs  math_array_optimize.rs
src/fan455_math_scalar/src/: lib.rs  math_scalar_basic.rs
src/fan455_util/src/: util_basic.rs  util_npy.rs  util_string.rs
