[package]
name = "fan455_bayes_test"
version = "1.0.0"
edition = "2021"
authors = ["Xie Haifan"]
license = "MIT OR Apache-2.0"
description = "Implementation of a Bayes panel linear regression model proposed in the author's working paper."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fan455_util = {path="src/fan455_util"}
fan455_util_macro = {path="src/fan455_util_macro"}
fan455_arrf64 = {path="src/fan455_arrf64", features=["mkl-win"]}
fan455_bayes = {path="src/fan455_bayes"}
#fan455_bayes = {path="src/fan455_bayes", features=["nuts_enable_msg"]}
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
