[package]
name = "fan455_bayes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
statrs = "0.16.0"
fan455_util = {path="../fan455_util"}
fan455_arrf64 = {path="../fan455_arrf64"}
fan455_math_array = {path="../fan455_math_array"}

[features]
nuts_covar_adjust_num_of_samples = []
nuts_covar_regularization = []
nuts_enable_msg = []